[gd_scene load_steps=12 format=3 uid="uid://iefhk84hciax"]

[ext_resource type="Script" path="res://mainmenu/main_menu.gd" id="1_cv5ac"]
[ext_resource type="Texture2D" uid="uid://d3ysm7xc8ruvn" path="res://assets/Background/Pink.png" id="2_0s078"]
[ext_resource type="Texture2D" uid="uid://3t644qxgy05j" path="res://mainmenu/logo.png" id="3_p7lsg"]
[ext_resource type="Texture2D" uid="uid://bn3eqajscvsvq" path="res://mainmenu/puffel_32x_32.png" id="4_l2dxo"]
[ext_resource type="Texture2D" uid="uid://dadnrye2cq4i0" path="res://assets/Terrain (16x16).png" id="5_33o8o"]
[ext_resource type="AudioStream" uid="uid://bkxowiawgphn2" path="res://sounds/select-sound-121244.mp3" id="6_ye61o"]
[ext_resource type="PackedScene" uid="uid://bbamo5amixx4v" path="res://scenes/items/HatSelection/ChoosingHats.tscn" id="7_xqpga"]
[ext_resource type="AudioStream" uid="uid://ckiyojot4unv2" path="res://sounds/Title.mp3" id="8_8ruu1"]

[sub_resource type="Theme" id="Theme_a1gx5"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_r86k4"]
texture = ExtResource("5_33o8o")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0

[sub_resource type="TileSet" id="TileSet_516hr"]
sources/0 = SubResource("TileSetAtlasSource_r86k4")

[node name="main_menu" type="Node"]
script = ExtResource("1_cv5ac")

[node name="TextureRect2" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_a1gx5")
texture = ExtResource("2_0s078")
stretch_mode = 1

[node name="TextureRect" type="TextureRect" parent="TextureRect2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -493.0
offset_top = 99.0
offset_right = 493.0
offset_bottom = 230.0
grow_horizontal = 2
size_flags_vertical = 0
texture = ExtResource("3_p7lsg")

[node name="start" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.243056
anchor_top = 0.515432
anchor_right = 0.404514
anchor_bottom = 0.62963
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 26
text = "Start
"
metadata/_edit_use_anchors_ = true

[node name="customization" type="Button" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.007
anchor_right = 0.007
offset_left = 664.936
offset_top = 337.0
offset_right = 853.936
offset_bottom = 418.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Hats
"

[node name="Puffel" type="TextureRect" parent="."]
clip_contents = true
offset_left = 159.0
offset_top = 576.0
offset_right = 511.0
offset_bottom = 644.0
texture = ExtResource("4_l2dxo")
stretch_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ye61o")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.702257
anchor_top = 0.626543
anchor_right = 0.736979
anchor_bottom = 0.688272
offset_top = 14.0
offset_bottom = 14.0
grow_horizontal = 0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="ChoosingHats" parent="Control" instance=ExtResource("7_xqpga")]

[node name="BgMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_8ruu1")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(0, 1)
tile_set = SubResource("TileSet_516hr")
format = 2
layer_0/tile_data = PackedInt32Array(2621437, 393216, 9, 2686973, 393216, 10, 2621438, 458752, 9, 2686974, 458752, 10, 2621439, 524288, 9, 2686975, 524288, 10, 2555904, 393216, 9, 2621440, 393216, 10, 2555905, 458752, 9, 2621441, 458752, 10, 2555906, 524288, 9, 2621442, 524288, 10, 2555907, 393216, 9, 2621443, 393216, 10, 2555908, 458752, 9, 2621444, 458752, 10, 2555909, 524288, 9, 2621445, 524288, 10, 2555910, 393216, 9, 2621446, 393216, 10, 2555911, 458752, 9, 2621447, 458752, 10, 2555912, 524288, 9, 2621448, 524288, 10, 2555913, 393216, 9, 2621449, 393216, 10, 2555914, 458752, 9, 2621450, 458752, 10, 2555915, 524288, 9, 2621451, 524288, 10, 2555916, 393216, 9, 2621452, 393216, 10, 2555917, 458752, 9, 2621453, 458752, 10, 2555918, 524288, 9, 2555919, 393216, 9, 2555920, 458752, 9, 2621456, 458752, 10, 2555921, 524288, 9, 2621457, 524288, 10, 2555922, 393216, 9, 2621458, 393216, 10, 2555923, 458752, 9, 2621459, 458752, 10, 2555924, 524288, 9, 2621460, 524288, 10, 2555925, 393216, 9, 2621461, 393216, 10, 2555926, 458752, 9, 2621462, 458752, 10, 2555927, 524288, 9, 2621463, 524288, 10, 2555928, 393216, 9, 2621464, 393216, 10, 2555929, 458752, 9, 2621465, 458752, 10, 2555930, 524288, 9, 2621466, 524288, 10, 2555931, 393216, 9, 2621467, 393216, 10, 2555932, 458752, 9, 2621468, 458752, 10, 2555933, 524288, 9, 2621469, 524288, 10, 2555934, 393216, 9, 2621470, 393216, 10, 2555935, 458752, 9, 2621471, 458752, 10, 2555936, 524288, 9, 2621472, 524288, 10, 2555937, 393216, 9, 2621473, 393216, 10, 2555938, 458752, 9, 2621474, 458752, 10, 2555939, 524288, 9, 2621475, 524288, 10, 2555940, 393216, 9, 2621476, 393216, 10, 2555941, 458752, 9, 2621477, 458752, 10, 2555942, 524288, 9, 2621478, 524288, 10, 2555943, 393216, 9, 2621479, 393216, 10, 2555944, 458752, 9, 2621480, 458752, 10, 2555945, 524288, 9, 2621481, 524288, 10, 2555946, 393216, 9, 2621482, 393216, 10, 2555947, 458752, 9, 2621483, 458752, 10, 2555948, 524288, 9, 2621484, 524288, 10, 2555949, 393216, 9, 2621485, 393216, 10, 2555950, 458752, 9, 2621486, 458752, 10, 2555951, 524288, 9, 2621487, 524288, 10, 2555952, 393216, 9, 2621488, 393216, 10, 2555953, 458752, 9, 2621489, 458752, 10, 2555954, 524288, 9, 2621490, 524288, 10, 2555955, 393216, 9, 2621491, 393216, 10, 2555956, 458752, 9, 2621492, 458752, 10, 2555957, 524288, 9, 2621493, 524288, 10, 2555958, 393216, 9, 2621494, 393216, 10, 2555959, 458752, 9, 2621495, 458752, 10, 2555960, 524288, 9, 2621496, 524288, 10, 2555961, 393216, 9, 2621497, 393216, 10, 2555962, 458752, 9, 2621498, 458752, 10, 2555963, 524288, 9, 2621499, 524288, 10, 2555964, 393216, 9, 2621500, 393216, 10, 2555965, 458752, 9, 2621501, 458752, 10, 2555966, 524288, 9, 2621502, 524288, 10, 2555967, 393216, 9, 2621503, 393216, 10, 2555968, 458752, 9, 2621504, 458752, 10, 2555969, 524288, 9, 2621505, 524288, 10, 2555970, 393216, 9, 2621506, 393216, 10, 2555971, 458752, 9, 2621507, 458752, 10, 2555972, 524288, 9, 2621508, 524288, 10, 2555973, 393216, 9, 2621509, 393216, 10, 2555974, 458752, 9, 2621510, 458752, 10, 2555975, 524288, 9, 2621511, 524288, 10, 2555976, 393216, 9, 2621512, 393216, 10, 2555977, 458752, 9, 2621513, 458752, 10, 2555978, 524288, 9, 2621514, 524288, 10, 2555901, 393216, 8, 2555902, 458752, 8, 2555903, 524288, 8, 2490368, 393216, 8, 2490369, 458752, 8, 2490370, 524288, 8, 2490371, 393216, 8, 2490372, 458752, 8, 2490373, 524288, 8, 2490374, 393216, 8, 2490375, 458752, 8, 2490376, 524288, 8, 2490377, 393216, 8, 2490378, 458752, 8, 2490379, 524288, 8, 2490380, 393216, 8, 2490381, 458752, 8, 2490382, 524288, 8, 2490383, 393216, 8, 2490384, 458752, 8, 2490385, 524288, 8, 2490386, 393216, 8, 2490387, 458752, 8, 2490388, 524288, 8, 2490389, 393216, 8, 2490390, 458752, 8, 2490391, 524288, 8, 2490392, 393216, 8, 2490393, 458752, 8, 2490394, 524288, 8, 2490395, 393216, 8, 2490396, 458752, 8, 2490397, 524288, 8, 2490398, 393216, 8, 2490399, 458752, 8, 2490400, 524288, 8, 2490401, 393216, 8, 2490402, 458752, 8, 2490403, 524288, 8, 2490404, 393216, 8, 2490405, 458752, 8, 2490406, 524288, 8, 2490407, 393216, 8, 2490408, 458752, 8, 2490409, 524288, 8, 2490410, 393216, 8, 2490411, 458752, 8, 2490412, 524288, 8, 2490413, 393216, 8, 2490414, 458752, 8, 2490415, 524288, 8, 2490416, 393216, 8, 2490417, 458752, 8, 2490418, 524288, 8, 2490419, 393216, 8, 2490420, 458752, 8, 2490421, 524288, 8, 2490422, 393216, 8, 2490423, 458752, 8, 2490424, 524288, 8, 2490425, 393216, 8, 2490426, 458752, 8, 2490427, 524288, 8, 2490428, 393216, 8, 2490429, 458752, 8, 2490430, 524288, 8, 2490431, 393216, 8, 2490432, 458752, 8, 2490433, 524288, 8, 2490434, 393216, 8, 2490435, 458752, 8, 2490436, 524288, 8, 2490437, 393216, 8, 2490438, 458752, 8, 2490439, 524288, 8, 2490440, 393216, 8, 2490441, 458752, 8, 2490442, 524288, 8, 2752509, 786432, 8, 2752510, 851968, 8, 2752511, 917504, 8, 2686976, 786432, 8, 2686977, 851968, 8, 2686978, 851968, 8, 2686979, 851968, 8, 2686982, 851968, 8, 2686983, 851968, 8, 2686980, 851968, 8, 2686981, 851968, 8, 2621454, 524288, 10, 2621455, 393216, 10, 2686984, 851968, 8, 2686985, 851968, 8, 2686986, 851968, 8, 2686987, 851968, 8, 2686988, 851968, 8, 2686989, 851968, 8, 2686990, 851968, 8, 2686991, 851968, 8, 2686992, 851968, 8, 2686993, 851968, 8, 2686994, 851968, 8, 2686995, 851968, 8, 2686996, 851968, 8, 2686997, 851968, 8, 2686998, 851968, 8, 2686999, 851968, 8, 2687000, 851968, 8, 2687001, 851968, 8, 2687002, 851968, 8, 2687003, 851968, 8, 2687004, 851968, 8, 2687005, 851968, 8, 2687006, 851968, 8, 2687007, 851968, 8, 2687008, 851968, 8, 2687009, 851968, 8, 2687010, 851968, 8, 2687011, 851968, 8, 2687012, 851968, 8, 2687013, 851968, 8, 2687014, 851968, 8, 2687015, 851968, 8, 2687016, 851968, 8, 2687017, 851968, 8, 2687018, 851968, 8, 2687019, 851968, 8, 2687020, 851968, 8, 2687021, 851968, 8, 2687022, 851968, 8, 2687023, 851968, 8, 2687024, 851968, 8, 2687025, 851968, 8, 2687026, 851968, 8, 2687027, 851968, 8, 2687028, 851968, 8, 2687029, 851968, 8, 2687030, 851968, 8, 2687031, 851968, 8, 2687032, 851968, 8, 2687033, 851968, 8, 2687034, 851968, 8, 2687035, 851968, 8, 2687036, 851968, 8, 2687037, 851968, 8, 2687038, 851968, 8, 2687039, 851968, 8, 2687040, 851968, 8, 2687041, 851968, 8, 2687042, 851968, 8, 2687043, 851968, 8, 2687044, 851968, 8, 2687045, 851968, 8, 2687046, 851968, 8, 2687047, 917504, 8, 2687048, 786432, 8, 2687049, 851968, 8, 2687050, 917504, 8)

[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="customization" to="." method="_on_customization_pressed"]
